[package]
name = "my-lib"
version = "0.1.0"
authors = ["David Komer <david.komer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]
dev = ["wee_alloc", "wasm-logger", "console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
log = "0.4.14"
cfg-if = "1.0.0"
serde-wasm-bindgen = "0.3.1"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
wasm-logger = { version = "0.2.0", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

